--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
         let ws;
 
         function connect() {
-            ws = new WebSocket("ws://localhost:8080/chat");
+            ws = new WebSocket("ws://"+location.host+"/chat");
             ws.onmessage = function (e) {
                 printMessage(e.data);
             }
@@ -40,6 +40,7 @@
     </script>
 </head>
 <body>
+    <h1>V0.1</h1>
 <input type="text" id="name"><input id="connectButton" type="button" value="Connect" onclick="connect()">
 <div id="messages"></div>
 <input type="text" id="message">
