--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,50 +1,64 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script type="application/javascript">
-        let ws;
-
-        function connect() {
-            console.log('Connect to '+location.host);
-            ws = new WebSocket("ws://"+location.host+"/chat");
-            ws.onmessage = function (e) {
-                printMessage(e.data);
-            }
-            document.getElementById("connectButton").disabled = true;
-            document.getElementById("connectButton").value = "Connected";
-            document.getElementById("name").disabled = true;
-        }
-
-        function printMessage(data) {
-            let messages = document.getElementById("messages");
-            let messageData = JSON.parse(data);
-            let newMessage = document.createElement("div");
-            newMessage.innerHTML = messageData.name + " : " + messageData.message;
-            messages.appendChild(newMessage);
-        }
-
-        function sendToGroupChat() {
-            let messageText = document.getElementById("message").value;
-            document.getElementById("message").value="";
-            let name = document.getElementById("name").value;
-            let messageObject = {
-                name: name,
-                message: messageText
-            }
-            ws.send(JSON.stringify(messageObject))
-        }
-    </script>
+    <title>Spring Boot Chat</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/client.js"></script>
 </head>
-<body>
-    <h1>V0.11</h1>
-<input type="text" id="name"><input id="connectButton" type="button" value="Connect" onclick="connect()">
-<div id="messages"></div>
-<input type="text" id="message">
-<input type="button" value="send" onclick="sendToGroupChat()">
+
+
+
+<body class="text-center">
+    <div class="form-signin" id="logindiv">
+        <form id="input-form" class="form-signin"  accept-charset="utf-8">
+            <h1 class="h3 mb-3 fw-normal">Spring Boot Web Chat</h1>
+            <h2 class="h4 mb-3 fw-normal">V0.13</h2>
+
+            <div class="form-floating">
+                <input type="text" name="user" class="form-control" id="user" placeholder="Chat Name"
+                    aria-describedby="inputNameFeedback" required autofocus>
+            </div>
+            <br>
+            <button class="w-100 btn btn-lg btn-primary" type="button" id="anmelden">Anmelden</button>
+        </form>
+        <div class="mt-3 d-flex justify-content-center" id="Msg">
+            
+        </div>
+    </div>
+
+
+    <div class="container hidden" id="chatdiv">
+        <div class="row">
+            <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11">
+                <form>
+                    <div class="form-group">
+                        <input class="form-control input-sm" id="inputsm" type="text" id="message">
+                    </div>
+                </form>
+            </div>
+            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                <button type="button" class="btn btn-primary">send</button>
+            </div>
+        </div>
+        <div id="messages">
+            <p class="system">Frank joined the chat</p>
+            <p class="chatline"><span class="from">Frank:</span><span class="frommsg">Hallo Welt</span></p>
+            <p class="chatline"><span class="from">Wattenroth:</span><span class="frommsg">Hallo Welt</span></p>
+            <p class="self">Hallo Welt</p>
+        </div>
+    </div>
+
+
+
+
 </body>
+
 </html>
