--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
     <div class="form-signin" id="logindiv">
         <form id="input-form" class="form-signin"  accept-charset="utf-8">
             <h1 class="h3 mb-3 fw-normal">Spring Boot Web Chat</h1>
-            <h2 class="h4 mb-3 fw-normal">V0.13</h2>
+            <h2 class="h4 mb-3 fw-normal">V0.14</h2>
 
             <div class="form-floating">
                 <input type="text" name="user" class="form-control" id="user" placeholder="Chat Name"
@@ -45,14 +45,10 @@
                 </form>
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                <button type="button" class="btn btn-primary">send</button>
+                <button id="send" type="button" class="btn btn-primary">send</button>
             </div>
         </div>
         <div id="messages">
-            <p class="system">Frank joined the chat</p>
-            <p class="chatline"><span class="from">Frank:</span><span class="frommsg">Hallo Welt</span></p>
-            <p class="chatline"><span class="from">Wattenroth:</span><span class="frommsg">Hallo Welt</span></p>
-            <p class="self">Hallo Welt</p>
         </div>
     </div>
 
