--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
     <div class="form-signin" id="logindiv">
         <form id="input-form" class="form-signin"  accept-charset="utf-8">
             <h1 class="h3 mb-3 fw-normal">Spring Boot Web Chat</h1>
-            <h2 class="h4 mb-3 fw-normal">V0.16e</h2>
+            <h2 class="h4 mb-3 fw-normal">V0.16f</h2>
 
             <div class="form-floating">
                 <input type="text" name="user" class="form-control" id="user" placeholder="Chat Name"
